<resources>
    <string name="app_name">FitSnap</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="today">Today</string>
    <string name="date">Date</string>
    <string name="set_goal">Set Goal</string>
    <string name="diet_pts">Diet Pts</string>
    <string name="excercise_pts">Excercise Pts</string>
    <string name="cal">Cal</string>
    <string name="health_score">Health Score</string>
    <string name="your_goals">Your Goals</string>
    <string name="feed">Feed</string>
    <string name="activity">Activity</string>
    <string name="fried_chicken">Fried Chicken</string>
    <string name="food_information">Food information</string>
    <string name="out_of_100">out of 100</string>
    <string name="description">Description</string>
    <string name="macro_nutrients">Macro Nutrients</string>
    <string name="per_250gm">Per 250gm</string>
    <string name="per_serve">Per Serve</string>
    <string name="energy">Energy</string>
    <string name="protein">Protein</string>
    <string name="trans_fat">Trans Fat</string>
    <string name="carbohydrates">Carbohydrates</string>
    <string name="fiber">Fiber</string>
    <string name="facts">Facts</string>
    <string name="did_you_know">Did you know ?</string>
</resources>