<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FeedFragment">
<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="@dimen/_150sdp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:id="@+id/foodImage"
            />

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/_150sdp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:background="@color/foodImagShadow"
            android:id="@+id/infrontShadow"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/_28sdp"
            android:textColor="@color/white"
            app:layout_constraintBottom_toBottomOf="@id/infrontShadow"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="@dimen/_10sdp"
            android:layout_marginBottom="@dimen/_10sdp"
            android:textStyle="bold"
            android:id="@+id/foodName"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/food_information"
            android:textSize="@dimen/_15sdp"
            android:textColor="@color/white"
            app:layout_constraintBottom_toTopOf="@id/foodName"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="@dimen/_10sdp"
            android:layout_marginBottom="@dimen/_8sdp"
            android:id="@+id/text_foodInformation"/>
        <androidx.cardview.widget.CardView
            android:layout_width="@dimen/_71sdp"
            android:layout_height="@dimen/_76sdp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="@id/infrontShadow"
            android:layout_marginEnd="@dimen/_10sdp"
            android:layout_marginBottom="@dimen/_10sdp"
            app:cardCornerRadius="@dimen/_14sdp"
            android:backgroundTint="@color/health_rating_background"
            android:id="@+id/health_background">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/white"
                    android:textSize="@dimen/_20sdp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:id="@+id/health_rate"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/out_of_100"
                    android:textSize="@dimen/_8sdp"
                    android:textColor="@color/white"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/health_rate"
                    app:layout_constraintBottom_toBottomOf="parent"/>
            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.cardview.widget.CardView>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/description"
            android:textSize="@dimen/_22sdp"
            android:textColor="@color/black"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/infrontShadow"
            android:layout_marginTop="@dimen/_10sdp"
            android:id="@+id/text_description"/>
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintWidth_percent="0.95"
            app:layout_constraintTop_toBottomOf="@id/text_description"
            android:layout_marginTop="@dimen/_10sdp"
            android:id="@+id/description"
            android:textColor="@color/black"
            android:textSize="@dimen/_17sdp"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/macro_nutrients"
            android:textSize="@dimen/_22sdp"
            android:textColor="@color/black"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@id/text_description"
            app:layout_constraintTop_toBottomOf="@id/description"
            android:layout_marginTop="@dimen/_10sdp"
            android:id="@+id/text_macroNeutrients"/>

        <View
            android:layout_width="@dimen/_200sdp"
            android:layout_height="@dimen/_150sdp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/text_macroNeutrients"
            android:layout_marginTop="@dimen/_5sdp"
            android:background="@drawable/tableshape"
            android:id="@+id/table"/>
        <View
            android:layout_width="0dp"
            android:layout_height="@dimen/_1sdp"
            app:layout_constraintStart_toStartOf="@id/table"
            app:layout_constraintEnd_toEndOf="@id/table"
            app:layout_constraintTop_toTopOf="@id/table"
            android:layout_marginTop="@dimen/_30sdp"
            android:background="@color/black"
            android:id="@+id/horizontalStraightLine"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/_10sdp"
            android:text="@string/per_250gm"
            android:textColor="@color/black"
            app:layout_constraintEnd_toEndOf="@id/table"
            app:layout_constraintTop_toTopOf="@id/table"
            app:layout_constraintBottom_toTopOf="@id/horizontalStraightLine"
            android:layout_marginEnd="@dimen/_10sdp"
            android:textStyle="bold"
            android:id="@+id/text_250gm"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/per_serve"
            android:textSize="@dimen/_10sdp"
            android:textColor="@color/black"
            android:textStyle="bold"
            app:layout_constraintEnd_toStartOf="@id/text_250gm"
            app:layout_constraintTop_toTopOf="@id/table"
            app:layout_constraintBottom_toTopOf="@id/horizontalStraightLine"
            android:layout_marginEnd="@dimen/_10sdp"
            android:id="@+id/text_perServe"/>
        <androidx.constraintlayout.widget.Guideline
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/guide"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.50"/>
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:orientation="vertical"
            android:weightSum="5"
            app:layout_constraintStart_toStartOf="@id/table"
            app:layout_constraintEnd_toStartOf="@+id/guide"
            app:layout_constraintTop_toBottomOf="@id/horizontalStraightLine"
            app:layout_constraintBottom_toBottomOf="@id/table">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:textSize="@dimen/_10sdp"
                android:text="@string/energy"
                android:layout_marginStart="@dimen/_5sdp"
                android:textColor="@color/black"
                android:layout_marginTop="@dimen/_5sdp"
                android:layout_weight="1"
                android:id="@+id/text_energy"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:textSize="@dimen/_10sdp"
                android:text="@string/protein"
                android:layout_marginStart="@dimen/_5sdp"
                android:textColor="@color/black"
                android:layout_marginTop="@dimen/_5sdp"
                android:layout_weight="1"
                android:id="@+id/text_protein"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:textSize="@dimen/_10sdp"
                android:text="@string/trans_fat"
                android:layout_marginStart="@dimen/_5sdp"
                android:textColor="@color/black"
                android:layout_marginTop="@dimen/_5sdp"
                android:layout_weight="1"
                android:id="@+id/text_transFat"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:textSize="@dimen/_10sdp"
                android:text="@string/carbohydrates"
                android:layout_marginStart="@dimen/_5sdp"
                android:textColor="@color/black"
                android:layout_marginTop="@dimen/_5sdp"
                android:layout_weight="1"
                android:id="@+id/text_Carbohydrates"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:textSize="@dimen/_10sdp"
                android:text="@string/fiber"
                android:layout_marginStart="@dimen/_5sdp"
                android:textColor="@color/black"
                android:layout_marginTop="@dimen/_5sdp"
                android:layout_weight="1"
                android:id="@+id/text_fibre"
                />
        </LinearLayout>
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="@id/table"
            app:layout_constraintTop_toBottomOf="@id/horizontalStraightLine"
            app:layout_constraintBottom_toBottomOf="@id/table"
            app:layout_constraintStart_toStartOf="@id/guide"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/_10sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:layout_gravity="start"
                android:id="@+id/energy_serve"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/_10sdp"
                android:layout_gravity="center"
                android:id="@+id/energy_per250"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/_10sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:layout_gravity="start"
                android:id="@+id/protein_serve"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/_10sdp"
                android:layout_gravity="center"
                android:id="@+id/protein_per250"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/_10sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:layout_gravity="start"
                android:id="@+id/trans_serve"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/_10sdp"
                android:layout_gravity="center"
                android:id="@+id/trans_per250"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/_10sdp"
                android:layout_gravity="start"
                android:layout_marginTop="@dimen/_10sdp"
                android:id="@+id/carb_serve"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/_10sdp"
                android:layout_gravity="center"
                android:id="@+id/carb_per250"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/_10sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:layout_gravity="start"
                android:id="@+id/fibre_serve"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/_10sdp"
                android:layout_gravity="center"
                android:id="@+id/fibre_per250"/>
        </LinearLayout>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/_22sdp"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/table"
        android:text="@string/facts"
        android:textStyle="bold"
        android:layout_marginTop="@dimen/_10sdp"
        android:id="@+id/text_facts"/>
    <androidx.recyclerview.widget.RecyclerView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text_facts"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        android:orientation="horizontal"
        android:id="@+id/factsRecycler"/>
    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>