<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".HomeFragment">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/today"
        android:textSize="@dimen/_25sdp"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:textStyle="bold"
        android:id="@+id/txt_today"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/date"
        android:textSize="@dimen/_15sdp"
        app:layout_constraintStart_toStartOf="@id/txt_today"
        app:layout_constraintEnd_toEndOf="@id/txt_today"
        app:layout_constraintTop_toBottomOf="@id/txt_today"
        android:id="@+id/txt_date"
        />

    <TextView
        android:layout_width="@dimen/_200sdp"
        android:layout_height="@dimen/_200sdp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/txt_date"
        android:background="@drawable/outercircle"
        android:layout_marginTop="@dimen/_10sdp"
        android:id="@+id/outerCircle"/>
    <TextView
        android:layout_width="@dimen/_160sdp"
        android:layout_height="@dimen/_160sdp"
        android:background="@drawable/innercircle"
        app:layout_constraintTop_toTopOf="@id/outerCircle"
        app:layout_constraintBottom_toBottomOf="@id/outerCircle"
        app:layout_constraintStart_toStartOf="@id/outerCircle"
        app:layout_constraintEnd_toEndOf="@id/outerCircle"
        android:textColor="@color/setGoalColor"
        android:id="@+id/setGoalCircle"/>
    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textSize="@dimen/_15sdp"
        app:layout_constraintStart_toStartOf="@id/setGoalCircle"
        app:layout_constraintEnd_toEndOf="@id/setGoalCircle"
        app:layout_constraintTop_toTopOf="@id/setGoalCircle"
        app:layout_constraintBottom_toBottomOf="@id/setGoalCircle"
        android:gravity="center"
        android:id="@+id/planeName"/>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guide1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.23" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/dieticon"
        app:layout_constraintStart_toStartOf="@id/guide1"
        app:layout_constraintTop_toBottomOf="@id/outerCircle"
        android:layout_marginTop="@dimen/_10sdp"
        android:id="@+id/dietIcon"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/diet_pts"
        android:textSize="@dimen/_15sdp"
        app:layout_constraintStart_toEndOf="@id/dietIcon"
        app:layout_constraintTop_toTopOf="@id/dietIcon"
        app:layout_constraintBottom_toBottomOf="@id/dietIcon"
        android:layout_marginStart="@dimen/_8sdp"
        android:id="@+id/text_DietPts"/>
    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/fitnesicon"
        app:layout_constraintStart_toEndOf="@id/text_DietPts"
        app:layout_constraintTop_toTopOf="@id/text_DietPts"
        app:layout_constraintBottom_toBottomOf="@id/text_DietPts"
        android:layout_marginStart="@dimen/_15sdp"
        android:id="@+id/fitnessIcon"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/excercise_pts"
        android:textSize="@dimen/_15sdp"
        app:layout_constraintStart_toEndOf="@id/fitnessIcon"
        app:layout_constraintTop_toTopOf="@id/fitnessIcon"
        app:layout_constraintBottom_toBottomOf="@id/fitnessIcon"
        android:layout_marginStart="@dimen/_8sdp"
        android:id="@+id/text_Exercise"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="@id/dietIcon"
        app:layout_constraintEnd_toEndOf="@id/dietIcon"
        app:layout_constraintTop_toBottomOf="@id/dietIcon"
        android:layout_marginTop="@dimen/_10sdp"
        android:textSize="@dimen/_15sdp"
        android:textColor="@color/faa057"
        android:id="@+id/dietPts"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="@id/fitnessIcon"
        app:layout_constraintEnd_toEndOf="@id/fitnessIcon"
        app:layout_constraintTop_toBottomOf="@id/fitnessIcon"
        android:layout_marginTop="@dimen/_10sdp"
        android:textSize="@dimen/_15sdp"
        android:textColor="@color/faa057"
        android:id="@+id/excercisePts"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cal"
        app:layout_constraintStart_toStartOf="@id/dietPts"
        app:layout_constraintEnd_toEndOf="@id/dietPts"
        app:layout_constraintTop_toBottomOf="@id/dietPts"
        android:layout_marginTop="@dimen/_10sdp"
        android:textSize="@dimen/_15sdp"
        android:id="@+id/text_cal"/>

    <TextView
        android:id="@+id/text_healthScore"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/health_score"
        android:textSize="@dimen/_15sdp"
        app:layout_constraintEnd_toEndOf="@+id/excercisePts"
        app:layout_constraintStart_toStartOf="@+id/excercisePts"
        app:layout_constraintTop_toBottomOf="@+id/excercisePts"
        android:layout_marginTop="@dimen/_10sdp"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/your_goals"
        android:textSize="@dimen/_18sdp"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text_cal"
        android:layout_marginTop="@dimen/_25sdp"
        android:layout_marginStart="@dimen/_10sdp"
        android:id="@+id/text_yourGoals"/>
    <androidx.cardview.widget.CardView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text_yourGoals"
        android:layout_marginTop="@dimen/_10sdp"
        android:background="@color/fafaff"
        app:cardCornerRadius="@dimen/_10sdp"
        android:id="@+id/goalsCardView">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <!-- image card-->
            <androidx.cardview.widget.CardView
                android:layout_width="@dimen/_70sdp"
                android:layout_height="@dimen/_70sdp"
                app:cardCornerRadius="@dimen/_10sdp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:id="@+id/imageCard">
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/goalImage"/>
            </androidx.cardview.widget.CardView>
            <com.mikhaellopez.circularprogressbar.CircularProgressBar
                android:layout_width="@dimen/_40sdp"
                android:layout_height="@dimen/_40sdp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_marginTop="@dimen/_10sdp"
                android:layout_marginEnd="@dimen/_10sdp"
                app:cpb_background_progressbar_color="@color/white"
                app:cpb_progressbar_color="#F8B546"
               android:id="@+id/percent"/>
            <TextView
                android:id="@+id/planeTitle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:textSize="@dimen/_15sdp"
                app:layout_constraintEnd_toStartOf="@id/percent"
                app:layout_constraintTop_toTopOf="@id/imageCard"
                android:layout_marginStart="@dimen/_10sdp"
                android:layout_marginEnd="@dimen/_5sdp"
                app:layout_constraintStart_toEndOf="@id/imageCard" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/percentage"
                app:layout_constraintStart_toStartOf="@id/percent"
                app:layout_constraintEnd_toEndOf="@id/percent"
                app:layout_constraintTop_toTopOf="@id/percent"
                app:layout_constraintBottom_toBottomOf="@id/percent"
                android:textSize="@dimen/_12sdp"
                android:textColor="@color/black"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>